--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap");
 * {
   margin: 0;
@@ -51,11 +50,14 @@ nav ul {
 
 .gameInfo {
   padding: 0 34px;
-  /* font-family: "Baloo Bhaina 2", cursive; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .gameInfo h1 {
   font-size: 2.5rem;
 }
+
 .info {
   font-size: 22px;
 }
@@ -81,7 +83,7 @@ nav ul {
 }
 
 #reset {
-  margin: 0 23px;
+  margin: 15px 0px;
   padding: 4px 18px;
   background: #f3e7f9;
   border-radius: 6px;
@@ -92,6 +94,11 @@ nav ul {
 #reset:hover {
   background-color: rgb(200, 157, 240);
 }
+.info-div {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 @media screen and (max-width: 950px) {
   .gameContainer {
     flex-wrap: wrap;
@@ -100,10 +107,15 @@ nav ul {
     margin-top: 34px;
   }
   .gameInfo h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   .container {
     grid-template-rows: repeat(3, 20vw);
     grid-template-columns: repeat(3, 20vw);
+  }
+  .info-div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
